Enables permissions to set how many islands a play can create.
Multiple Island Permissions #2199